--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.8.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
     "@stripe/stripe-js": "^7.1.0",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.511.0",
     "next": "15.2.4",
@@ -23,15 +21,16 @@
     "stripe": "^18.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.1.0",
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.36",
+    "@types/react-dom": "18.2.15",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.2.4",
     "prisma": "^6.5.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "3.4.3",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19",
+    "typescript": "5.4.5"
   }
 }
