--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,12 +25,12 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.36",
     "@types/react-dom": "18.2.15",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.0.0",
     "eslint-config-next": "15.2.4",
+    "postcss": "^8.5.6",
     "prisma": "^6.5.0",
-    "tailwindcss": "3.4.3",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
   }
 }
