--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
     },
     "types": ["next-auth"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "types"             // ✅ include your custom types here
+  ],
   "exclude": ["node_modules"]
 }
