--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.5.0",
     "@stripe/stripe-js": "^7.1.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "lucide-react": "^0.511.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
