--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "stripe": "^18.0.0"
+    "stripe": "^18.0.0",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
